--- a/beer-consumption.ipynb
+++ b/beer-consumption.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,144 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Data</th>\n",
-       "      <th>Temperatura Media (C)</th>\n",
-       "      <th>Temperatura Minima (C)</th>\n",
-       "      <th>Temperatura Maxima (C)</th>\n",
-       "      <th>Precipitacao (mm)</th>\n",
-       "      <th>Final de Semana</th>\n",
-       "      <th>Consumo de cerveja (litros)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>27.30</td>\n",
-       "      <td>23.9</td>\n",
-       "      <td>32.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>27.02</td>\n",
-       "      <td>24.5</td>\n",
-       "      <td>33.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28972</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2015-01-03</td>\n",
-       "      <td>24.82</td>\n",
-       "      <td>22.4</td>\n",
-       "      <td>29.9</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30814</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2015-01-04</td>\n",
-       "      <td>23.98</td>\n",
-       "      <td>21.5</td>\n",
-       "      <td>28.6</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>2015-01-05</td>\n",
-       "      <td>23.82</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>28.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-01-06</td>\n",
-       "      <td>23.78</td>\n",
-       "      <td>20.1</td>\n",
-       "      <td>30.5</td>\n",
-       "      <td>12.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28218</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>2015-01-07</td>\n",
-       "      <td>24.00</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>33.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29732</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>2015-01-08</td>\n",
-       "      <td>24.90</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>32.8</td>\n",
-       "      <td>48.6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28397</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>2015-01-09</td>\n",
-       "      <td>28.20</td>\n",
-       "      <td>21.9</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24886</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>2015-01-10</td>\n",
-       "      <td>26.76</td>\n",
-       "      <td>22.1</td>\n",
-       "      <td>34.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>37937</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "         Data  Temperatura Media (C)  Temperatura Minima (C)  \\\n",
        "0  2015-01-01                  27.30                    23.9   \n",
@@ -196,15 +64,15 @@
        "7                        28397  \n",
        "8                        24886  \n",
        "9                        37937  "
-      ]
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Data</th>\n      <th>Temperatura Media (C)</th>\n      <th>Temperatura Minima (C)</th>\n      <th>Temperatura Maxima (C)</th>\n      <th>Precipitacao (mm)</th>\n      <th>Final de Semana</th>\n      <th>Consumo de cerveja (litros)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2015-01-01</td>\n      <td>27.30</td>\n      <td>23.9</td>\n      <td>32.5</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>25461</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2015-01-02</td>\n      <td>27.02</td>\n      <td>24.5</td>\n      <td>33.5</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>28972</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2015-01-03</td>\n      <td>24.82</td>\n      <td>22.4</td>\n      <td>29.9</td>\n      <td>0.0</td>\n      <td>1</td>\n      <td>30814</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2015-01-04</td>\n      <td>23.98</td>\n      <td>21.5</td>\n      <td>28.6</td>\n      <td>1.2</td>\n      <td>1</td>\n      <td>29799</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2015-01-05</td>\n      <td>23.82</td>\n      <td>21.0</td>\n      <td>28.3</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>28900</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2015-01-06</td>\n      <td>23.78</td>\n      <td>20.1</td>\n      <td>30.5</td>\n      <td>12.2</td>\n      <td>0</td>\n      <td>28218</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2015-01-07</td>\n      <td>24.00</td>\n      <td>19.5</td>\n      <td>33.7</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>29732</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2015-01-08</td>\n      <td>24.90</td>\n      <td>19.5</td>\n      <td>32.8</td>\n      <td>48.6</td>\n      <td>0</td>\n      <td>28397</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2015-01-09</td>\n      <td>28.20</td>\n      <td>21.9</td>\n      <td>34.0</td>\n      <td>4.4</td>\n      <td>0</td>\n      <td>24886</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2015-01-10</td>\n      <td>26.76</td>\n      <td>22.1</td>\n      <td>34.2</td>\n      <td>0.0</td>\n      <td>1</td>\n      <td>37937</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 35,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "source": [
-    "df_beer = pd.read_csv(\"Consumo_cerveja.csv\", decimal=\",\", thousands=\".\")\n",
+    "df_beer = pd.read_csv(\"data/Consumo_cerveja.csv\", decimal=\",\", thousands=\".\")\n",
     "df_beer.head(10)"
    ]
   },
@@ -550,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
